# met-ecs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  unit-test.yml
docs/: README.md
src/met/: met-config.hpp  met.hpp
src/met/config/: config.hpp  version.hpp
src/met/core/: component-collection.hpp  iterator.hpp  registry.hpp  view.hpp
test/: common.hpp  main.cpp
test/benchmark/: benchmark.cpp
test/met/core/: component-collection.cpp  registry.cpp  view.cpp
